--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,10 @@ form{
 {
    /* left-align tables' cells */
    text-align: left;
+   color: black;
+   background-color: #white;
 }
+
 
 #bottom
 {
