--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,9 @@
     /* center contents */
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
+	text-align: center;
+
+    
 }
 
 #top
@@ -31,20 +33,20 @@ form{
 	display: inline;
 }
 
-
 #top .nav
 {
-    /* center navigation pills */
-    display: inline-block;
+    display: block;
+
+    
 }
+
 
 #middle .form-control
 {
-    /* center form controls */
-    display: inline-block;
-
+    display: inline;
+	
     /* override Bootstrap's 100% width for form controls */
-    width: auto;
+	width: auto;
 }
 
 #middle td
@@ -53,6 +55,7 @@ form{
    text-align: left;
    color: #C2F0F0
    background-color: #white;
+
 }
 
 
@@ -60,7 +63,11 @@ form{
 {
     /* shrink bottom's font size */
     font-size: smaller;
-
+	
+	/* Center */
+	text-align: center;
+	
+	
     /* surround with whitespace */
     margin: 60px;
 }
