-Added a profile which currently shows logged in user and current group -fixed upload stuff on my end
Signed-off-by: Sam Rackey <samrcr71@gmail.com>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,14 @@ form{
 
 }
 
+#middle .profile
+{
+   /* left-align tables' cells */
+   text-align: left;
+   color: #C2F0F0
+
+}
+
 
 #bottom
 {
