Mostly integrated media into comparison process. -Several views reimplemented in JavaScript instead of PHP -Media is compared instead of users.
Signed-off-by: eagraf <graf.ethan@gmail.com>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,3 +85,21 @@ form{
 {
 	display: inline; 
 }
+
+#objecta
+{
+	color: #C2F0F0;
+	float: left;
+}
+
+#objectb
+{
+	color: #C2F0F0;
+	float: right;
+}
+
+#skip
+{
+	margin-left: auto;
+    margin-right: auto;
+}
