-fixed image positioning
Signed-off-by: Sam Rackey <samrcr71@gmail.com>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,13 +89,13 @@ form{
 #objecta
 {
 	color: #C2F0F0;
-	float: left;
+	display: inline-block; 
 }
 
 #objectb
 {
 	color: #C2F0F0;
-	float: right;
+	display: inline-block; 
 }
 
 #media_a img
